--- a/mysite/blog/templates/blog/about.html
+++ b/mysite/blog/templates/blog/about.html
@@ -3,6 +3,9 @@
 <h1>About this Blog Site</h1>
 
 <div class="jumbotron">
+  <p>Hello! I am a computer science student and a python programmer. This is my first web development project.</p>
+  <p>On this website you can comment on any post written by our authors.</p>
+  <p>To become an author on this site you can write your request and contact as a comment on any post.</p>
   <p>This is a small blog project made to demonstrate the use of database management using python and django web framework!</p>
   <h4>Technologies Used are:</h4>
 
@@ -18,7 +21,7 @@
 <p>Thanks for visiting</p>
 <br>
 <br>
-<h5>Developed By :</h5>
+<h5>Project By :</h5>
 <p>Pradyumn Prakash Pandey</p>
-<p>Rohit Chaudhari</p>
+<p>B.Tech(Computer Science)</p>
 {% endblock %}
