--- a/mysite/blog/static/css/blog.css
+++ b/mysite/blog/static/css/blog.css
@@ -1,3 +1,9 @@
+body{
+  background: #EEEEEE;
+}
+.l1{
+  float: right;
+}
 .techfont{
   font-family: 'Russo One', sans-serif;
   font-size: 1.5em;
